Fix bug for no SSID variant. Deleted extra files 	изменено:      .gitignore 	изменено:      app/build/bin/app.apk 	изменено:      app/build/gen/com/kostya/wifilock/R.java 	изменено:      app/src/main/AndroidManifest.xml 	изменено:      app/src/main/assets/help.html 	изменено:      app/src/main/java/com/kostya/wifilock/BackgroundService.java 	изменено:      app/src/main/java/com/kostya/wifilock/Booter.java 	изменено:      app/src/main/java/com/kostya/wifilock/MainActivity.java 	изменено:      app/src/main/java/com/kostya/wifilock/MyList.java 	изменено:      app/src/main/java/com/kostya/wifilock/MyPoint.java 	изменено:      app/src/main/java/com/kostya/wifilock/SettingsActivity.java 	изменено:      app/src/main/res/values/strings.xml

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -8,7 +8,7 @@
 <h2>Общие сведения</h2>
 <p>Приложение снимает и возвращает блокировку экрана устройства на основе данных WiFi.
  Теоретическая точность определения "безопасных" мест может достигать метра или даже меньше
- (зависит от настроек, планировки комнат, количества доступных WiFi точек).
+ (зависит от настроек, планировки комнат, количества доступных WiFi точек). Что существенно лучше Google SmartLock, хотя не использует Trust API (которое недоступно сторонним разработчикам).
  При этом необязательно (хотя и желательно), чтобы устройство было подключено к WiFi сети.
  Программа стремится в любой непонятной ситуации защитить устройство паролем (цель приложения - сделать использование гаджета удобнее, не жертвуя безопасностью).
  Интернет для работы приложения не требуется.</p>
